--- a/whypangeo.ipynb
+++ b/whypangeo.ipynb
@@ -10,6 +10,7 @@
    "source": [
     "# Visualization & Data With Pangeo \n",
     "## https://pangeo.io/ (@pangeo_data)\n",
+    "#### Ryan May (@dopplershift)\n",
     "#### Hannah Aizenman (@story645)\n"
    ]
   },
@@ -184,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
